refactor: actualizo contraladores nuevo wrapper
